Prevents wrapping of action buttons in table cells

--- a/_croucher/_table.scss
+++ b/_croucher/_table.scss
@@ -83,6 +83,7 @@
       position: relative;
 
       &.actions {
+        white-space: nowrap;
         display: flex;
         gap: 10px;
         svg {
